syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option java_multiple_files = true;
package org.camunda.bpm.grpc;

// The external task service definition.
service ExternalTask {
  // fetches and locks external tasks
  rpc fetchAndLock (stream FetchAndLockRequest) returns (stream FetchAndLockResponse) {};
  rpc complete (CompleteRequest) returns (CompleteResponse) {};
  rpc unlock (UnlockRequest) returns (UnlockResponse) {};
  rpc handleFailure (HandleFailureRequest) returns (HandleFailureResponse) {};
  rpc handleBpmnError (HandleBpmnErrorRequest) returns (HandleBpmnErrorResponse) {};
  rpc extendLock (ExtendLockRequest) returns (ExtendLockResponse) {};
  rpc getLocalBinaryVariable (GetBinaryVariableRequest) returns (GetBinaryVariableResponse) {};
}

// The request message for fetching tasks
message FetchAndLockRequest {
  message FetchExternalTaskTopic {
    string topicName = 1;
    string businessKey = 2;
    string processDefinitionId = 3;
    repeated string processDefinitionIdIn = 4;
    string processDefinitionKey = 5;
    repeated string processDefinitionKeyIn = 6;
    string processDefinitionVersionTag = 7;
    int64 lockDuration = 8;
    bool deserializeValues = 9;
    bool localVariables = 10;
    bool withoutTenantId = 11;
    repeated string tenantIdIn = 12;
    bool includeExtensionProperties = 13;
    repeated string variables = 14;
  }

  string workerId = 1;
  bool usePriority = 2;
  repeated FetchExternalTaskTopic topic = 3;
}

// The response message fetching tasks
message FetchAndLockResponse {
  string id = 1;
  string workerId = 2;
  string topicName = 3;
  string activityId = 4;
  string activityInstanceId = 5;
  string errorMessage = 6;
  string errorDetails = 7;
  string executionId = 8;
  google.protobuf.Timestamp lockExpirationTime = 9;
  string processDefinitionKey = 10;
  string processDefinitionVersionTag = 11;
  string processInstanceId = 12;
  int32 retries = 13;
  string tenantId = 14;
  int64 priority = 15;
  string businessKey = 16;
  map<string, string> extensionProperties = 17;
  string processDefinitionId = 18;
  map<string, TypedValueFieldDto> variables = 19;
  
}

// The request message for completing a task
message CompleteRequest {
  string id = 1;
  string workerId = 2;
  map<string, TypedValueFieldDto> variables = 3;
  map<string, TypedValueFieldDto> localVariables = 4;
}

// The response message for completing a task
message CompleteResponse {
  int32 status = 1;
}

// The request message for unlocking a task
message UnlockRequest {
  string id = 1;
}

// The response message for unlocking a task
message UnlockResponse {
  int32 status = 1;
}

// The request message for reporting a failure for a task
message HandleFailureRequest {
  string id = 1;
  string workerId = 2;
  string errorMessage = 3;
  string errorDetails = 4;
  int32 retries = 5;
  int64 retryTimeout = 6;
}

// The response message for reporting a failure for a task
message HandleFailureResponse {
  int32 status = 1;
}

// The request message for reporting a BPMN error for a task
message HandleBpmnErrorRequest {
  string id = 1;
  string workerId = 2;
  string errorCode = 3;
  string errorMessage = 4;
  map<string, TypedValueFieldDto> variables = 5;
}

// The response message for for reporting a BPMN error a task
message HandleBpmnErrorResponse {
  int32 status = 1;
}

// The request message for completing a task
message ExtendLockRequest {
  string id = 1;
  string workerId = 2;
  int64 duration = 3;
}

// The response message for completing a task
message ExtendLockResponse {
  int32 status = 1;
}

// The request message for receiving the binary value of a variable
message GetBinaryVariableRequest {
  string processInstanceId = 1;
  string variableName = 2;
}

// The response for the binary value of a variable
message GetBinaryVariableResponse {
  bytes data = 1;
}

// The variable value representation
message TypedValueFieldDto {
  string type = 1;
  google.protobuf.Any value = 2;
  map<string, google.protobuf.Any> valueInfo = 3;
}

message ListValue {
  repeated google.protobuf.Any values = 1;
}
message MapValue {
  map<string, google.protobuf.Any> values = 1;
} 
